test/visibility/import/edgeCases/dontLeakSymbols2.good
dontLeakSymbols2.chpl:15: In function 'main':
dontLeakSymbols2.chpl:16: error: Symbol 'x' undeclared in module 'C'
